CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(TestBench)

INCLUDE(FindPkgConfig)

ADD_DEFINITIONS(-std=c++1y)

SET(TESTBENCH_ROOT_DIRECTORY ${CMAKE_SOURCE_DIR})
SET(TESTBENCH_OUTPUT_DIRECTORY ${TESTBENCH_ROOT_DIRECTORY}/bin)

SET(COMMON_DIRECTORY ${TESTBENCH_ROOT_DIRECTORY}/Common)

SET(RENDER_GRAPHS_TARGET RenderGraphs)


MACRO(TESTBENCH_COPY_RESULT TARGET)
    ADD_CUSTOM_COMMAND(TARGET ${TARGET} POST_BUILD COMMAND
                       ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${TARGET}> ${TESTBENCH_OUTPUT_DIRECTORY})
ENDMACRO(TESTBENCH_COPY_RESULT)


ADD_SUBDIRECTORY(Deps)
ADD_SUBDIRECTORY(RenderGraphs)


FILE(MAKE_DIRECTORY ${TESTBENCH_OUTPUT_DIRECTORY})
